# crypto-bot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py  deps.py  llm.py  orchestrator.py  reasoners.py  schemas.py  skills.py
agents/prompts/: __init__.py  reflection_system.jinja  sentiment_query.jinja  sentiment_system.jinja  strategy_decide.jinja  strategy_system.jinja
app/: __init__.py  main.py  state.py
core/: __init__.py  config.py  knowledge.py  observability.py  sessions.py
core/analysis/: __init__.py  edge.py  features.py  health.py  regime.py
core/execution/: __init__.py  bybit.py  exchange.py  orders.py  paper.py  rounding.py
core/risk/: __init__.py  engine.py  sizing.py  state.py
core/screener/: __init__.py  gates.py  scanner.py
core/strategies/: __init__.py  base.py  funding_carry.py  mean_reversion.py  momentum.py  registry.py
core/validation/: __init__.py  costs.py  gate.py  labeling.py  metrics.py  online.py  splits.py
data/: __init__.py
data/db/: __init__.py  connection.py  ohlcv.py
data/market/: __init__.py  indicators.py  snapshots.py
data/news/: __init__.py  cryptopanic.py  exa.py
knowledge/: README.md
knowledge/data_sources/: data_sources.md
knowledge/execution/: execution.md
memory/: __init__.py  journal.py  pg_journal.py  reflection.py
scripts/: db_init.sql  smoke_bybit.py
tests/: test_app.py  test_data_market.py  test_db_connection.py  test_derivatives.py  test_edge.py  test_execution.py  test_features.py  test_health.py  test_indicators_regime.py  test_knowledge.py  test_memory.py  test_ohlcv.py  test_orchestrator.py  test_regime.py  test_risk.py  test_rounding.py  test_screener.py  test_sessions.py  test_strategies.py  test_validation.py  test_validation_online.py
(+11 files in other folders)
